--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,16 @@
 # Site settings
-title: A blog about lorem ipsum dolor sit amet
-description: A blog about lorem ipsum dolor sit amet
+title: Mahmood's Personal Website
+description: This is my portfolio and was a fun project
 # baseurl: "/particle" # the subpath of your site, e.g. /blog
 # url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
 username: Mahmood Sales
-user_description: Bicycle rights irony actually neutra typewriter lyft. Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.
+user_description: I am a junior in computer science and am looking for a job in the field. I am passionate about technology and am eager to further my knowledge and experience. I have experience in coding in C++ and Python, as well as a strong understanding of software engineering and web development. I am looking for positions such as software engineer, software developer, front end developer, and web developer. I am excited to explore the opportunities in the computer science field and am eager to utilize my knowledge and skills to make a difference.
 user_title: Software Developer
 email: sales@usf.edu
-twitter_username: lorem_ipsum
+linkedin_username: mahmood-sales  # New entry for LinkedIn
 github_username:  makdoodie
-gplus_username:  lorem_ipsum
 
 # Google-analytics
 google-analytics:
